--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "check-types": "tsc --noEmit",
+    "run-eslint": "eslint App.tsx './src/**/*{js,ts,jsx,tsx}'",
+    "lint": "yarn check-types && yarn run-eslint",
+    "format": "eslint --ignore-path .gitignore App.tsx './src/**/*{js,ts,jsx,tsx}' --fix",
+    "format-lint": "yarn format && yarn lint"
   },
   "dependencies": {
     "expo": "~44.0.0",
@@ -21,6 +26,13 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
+    "eslint": "^8.7.0",
+    "eslint-config-universe": "^10.0.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "^2.5.1",
     "typescript": "~4.3.5"
   },
   "private": true
