--- a/package.json
+++ b/package.json
@@ -12,7 +12,14 @@
     "run-eslint": "eslint App.tsx './src/**/*{js,ts,jsx,tsx}'",
     "lint": "yarn check-types && yarn run-eslint",
     "format": "eslint --ignore-path .gitignore App.tsx './src/**/*{js,ts,jsx,tsx}' --fix",
-    "format-lint": "yarn format && yarn lint"
+    "format-lint": "yarn format && yarn lint",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "./src/**/*{js,ts,jsx,tsx}": [
+      "bash -c 'tsc --noEmit --pretty'",
+      "yarn eslint --fix"
+    ]
   },
   "dependencies": {
     "expo": "~44.0.0",
@@ -32,6 +39,8 @@
     "eslint-config-universe": "^10.0.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.2.2",
     "prettier": "^2.5.1",
     "typescript": "~4.3.5"
   },
