--- a/package.json
+++ b/package.json
@@ -12,26 +12,41 @@
     "run-eslint": "eslint App.tsx './src/**/*{js,ts,jsx,tsx}'",
     "lint": "yarn check-types && yarn run-eslint",
     "format": "eslint --ignore-path .gitignore App.tsx './src/**/*{js,ts,jsx,tsx}' --fix",
-    "format-lint": "yarn format && yarn lint",
-    "prepare": "husky install"
+    "check-code": "yarn format && yarn lint && yarn test",
+    "prepare": "husky install",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "setupFiles": [
+      "./jest/setup.js"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ]
   },
   "lint-staged": {
     "./src/**/*{js,ts,jsx,tsx}": [
       "bash -c 'tsc --noEmit --pretty'",
-      "yarn eslint --fix"
+      "yarn eslint --fix",
+      "yarn jest"
     ]
   },
   "dependencies": {
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
+    "jest": "^26.6.3",
+    "jest-expo": "^44.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-reanimated": "~2.3.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@testing-library/react-native": "^9.0.0",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
@@ -43,6 +58,7 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.2.2",
     "prettier": "^2.5.1",
+    "react-test-renderer": "17",
     "typescript": "~4.3.5"
   },
   "private": true
